# hotcook-linebot

./: .envrc.sample  Dockerfile  Makefile  README.md  pyproject.toml
hotcoo-linebot/: gpt.py  main.py
hotcook-linebot/: add_document.py  gpt.py  logger.py  main.py  vector_store.py
