[tool.poetry]
name = "hotcook-linebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
line-bot-sdk = "^3.9.0"
flask = "^3.0.2"
ngrok = "^1.2.0"
langchain = "0.1.12"
langchain-core = "0.1.32"
langchain-openai = "0.0.8"
langchain-community = "0.0.28"
pinecone-client = "3.1.0"


[tool.poetry.group.dev.dependencies]
unstructured = "0.10.15"
pdf2image = "1.17.0"
pdfminer-six = "20231228"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
